<resources>
    <string name="app_name">Registration App</string>
    <string name="name">Name:</string>
    <string name="pass">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="title">Registration Form</string>
    <string name="desc">Welcome to Adventure Learning Club!</string>
    <string name="fullname">Full name</string>
    <string name="gender">Gender</string>
    <string name="schID">Student ID</string>
    <string name="sch">School</string>
    <string name="email">Email</string>
    <string name="num">Phone</string>
</resources>